<resources>
    <string name="app_name">MySide</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="topic">Topic</string>
    <string name="my_friends">My Friends</string>
    <string name="my_profile">My Profile</string>
    <string name="my_msg">My Message</string>
    <string name="nearby_topic">Nearby Topic</string>
    <string name="private_chat_tittle">Friend Name</string>
    <string name="settings">Settings</string>
    <string name="add_friends">+</string>
    <string name="add_a_new_friend">Add New Friend</string>


    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="group">Group</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="nickname">NikeName</string>

    <string name="hint_nickname_input">Give Yourself A Nickname</string>
    <string name="hint_user_input">Your UserName input Here!</string>
    <string name="hint_pwd_input">And Your Password Here!</string>
    <string name="hint_confirm_pwd">Comfirm Password</string>

    <string name="btn_all_topic">All topic</string>
    <string name="btn_nearby_topic">Bearby Topic</string>
    <string name="btn_my_topic">My Topic</string>
    <string name="btn_my_friend">My Friend</string>
    <string name="btn_my_msg">My Message</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_my_profile">My Profile</string>
    <string name="btn_all_exit">Exit APP</string>
    <string name="btn_update_appversion">UpDate APP</string>
    <string name="btn_send">Send</string>
    <string name="btn_face">Face</string>
    <string name="btn_picture">Picture</string>
    <string name="btn_map">Map</string>
    <string name="btn_Voice">Voice</string>

    <string name="popup_add_friend_normal">Normal Add</string>
    <string name="popup_add_friend_phone_book">Phone Book Add</string>
    <string name="popup_add_friend_other">Other Add</string>

    <string name="openfire_connection_failed">Server Unconnection!</string>
    <string name="login_failed">Login Failed!</string>
    <string name="login_ok">Login Successfully!</string>
    <string name="already_loggin">An User Already Loggin Without Logout!</string>


    <string name="err_empty_user">User Cannot be Empty!</string>
    <string name="err_empty_user2">UserName unProvided!</string>
    <string name="err_empty_pwd">Password Cannot be Empty!</string>
    <string name="err_empty_nickname">You Need A Nickname!</string>
    <string name="err_empty_nickname2">NickName unProvided!</string>
    <string name="err_emptycomfirm_pwd">Input Password Again!</string>
    <string name="err_emptycomfirm_pwd_error">Confirmd Error Password!</string>
    <string name="err_update_apk_msg">Errors: Get Version Message!</string>
    <string name="err_download_update_apk">Get Apk of The New Versoin Failed!</string>
    <string name="err_save_apk_msg">Errors:APK Save Failed!</string>
    <string name="text_sth">some text..</string>

    <string name="no_network">No Network Service!</string>
    <string name="msg_has_send">Your Message Has Send!</string>
    <string name="go_open">Go Open</string>
    <string name="register_user_ok">Register Success!</string>
    <string name="register_user_failed">Register Failed!</string>
    <string name="register_user_conflict">Comflict: This User Exsits!</string>
    <string name="err_update_fail">Update Error!</string>
    <string name="err_update_current_is_new">Update Unnecessary:Your Version is New Version</string>
    <string name="version_update">Verion:</string>
    <string name="msg_marry_choose_to_update">98% Users Choose Update the New Version!</string>
    <string name="btn_dailog_update_now">Update Now!</string>
    <string name="btn_chat">Chat</string>
    <string name="contentdiscription_show_menu">show menu in left</string>
    <string name="contentdiscription_friends_icon">your friend icon</string>
</resources>
