<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/logoBackground"
    tools:context="com.yxnne.mysides.view.MainActivity">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_leftmenu_allTopic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_all_topic" />
            <Button
                android:id="@+id/btn_leftmenu_nearbyTopic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_nearby_topic" />
            <Button
                android:id="@+id/btn_leftmenu_my_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_my_topic" />
            <Button
                android:id="@+id/btn_leftmenu_my_friend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_my_friend" />
            <Button
                android:id="@+id/btn_leftmenu_my_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_my_msg" />
            <Button
                android:id="@+id/btn_leftmenu_my_res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_my_profile" />
            <Button
                android:id="@+id/btn_leftmenu_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_settings" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>

