<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_topic"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yxnne.mysides.view.NearbyTopicActivity">
    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@mipmap/title_backaground" >
        <TextView
            android:id="@+id/tv_private_chat_friendName"
            style="@style/title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/private_chat_tittle"
            />
        <TextView
            android:id="@+id/tv_private_chat_back"
            style="@style/title_text_style"
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
             />
    </RelativeLayout>
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayoutButton"
        android:layout_below="@id/title" >

        <LinearLayout
            android:id="@+id/linearLayoutChatContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="#FF888888"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_private_chat_more"
                style="@style/context_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/listview_icon_margin"
                android:text="@string/add_friends"
                android:textSize="48sp" />

            <EditText
                android:id="@+id/et_private_body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/btn_private_chat_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_send" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutMore"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:layout_marginEnd="48dp"
                    android:id="@+id/btn_private_chat_face"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_face" />

                <Button
                    android:id="@+id/btn_private_chat_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_picture" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <Button
                    android:layout_marginEnd="48dp"
                    android:id="@+id/btn_private_chat_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_Voice" />

                <Button
                    android:id="@+id/btn_private_chat_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_map" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>
