<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/popup_window_width"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="end"
    >

    <Button
        android:id="@+id/btn_my_friend_more_addFriend_normal"
        android:layout_marginEnd="@dimen/popup_window_button_right_margin"
        android:background="@mipmap/title_backaground"
        android:gravity="center_vertical|start"
        style="@style/title_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_add_friend_normal" />
    <Button
        android:id="@+id/btn_my_friend_more_addFriend_phonebook"
        android:layout_marginEnd="@dimen/popup_window_button_right_margin"
        android:gravity="center_vertical|start"
        style="@style/title_text_style"
        android:background="@mipmap/title_backaground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_add_friend_phone_book" />
    <Button
        android:id="@+id/btn_my_friend_more_addFriend_other"
        android:layout_marginEnd="@dimen/popup_window_button_right_margin"
        android:gravity="center_vertical|start"
        style="@style/title_text_style"
        android:background="@mipmap/title_backaground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_add_friend_other" />

</LinearLayout>
