<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yxnne.mysides.view.LoginActivity">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/title_backaground"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/tv_login_toRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_title"/>
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_title" />

        <TextView
            android:id="@+id/tv_login_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_title" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/contentBackground"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/tv_login_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/username" />

        <EditText
            android:id="@+id/et_login_username"
            android:background="@drawable/edittext_selector"
            android:layout_toEndOf="@id/tv_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_login_username"
            android:hint="@string/hint_user_input"
            android:ems="10"
            android:layout_alignEnd="@+id/et_login_password">

            <requestFocus />
        </EditText>

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:layout_marginTop="@dimen/margin"
            android:id="@+id/tv_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignStart="@id/tv_login_username"
            android:layout_alignEnd="@id/tv_login_username"
            android:layout_below="@+id/tv_login_username"
            android:text="@string/password" />

        <EditText
            android:id="@+id/et_login_password"
            android:background="@drawable/edittext_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_login_password"
            android:layout_below="@id/et_login_username"
            android:layout_toEndOf="@id/tv_login_password"
            android:ems="10"
            android:hint="@string/hint_pwd_input"
            android:inputType="textPassword" />
        <Button
            android:layout_marginTop="50dp"
            android:layout_below="@id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="登录"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_bk1"
            />
    </RelativeLayout>


</RelativeLayout>
