<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_friend"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yxnne.mysides.view.AddFriendActivity">
    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@mipmap/title_backaground" >
        <TextView
            android:id="@+id/tv_add_friend_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/title_text_style"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/back" />
        <TextView
            android:id="@+id/tv_add_friend_add_friend"
            android:layout_width="wrap_content"
            style="@style/title_text_style"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/add_a_new_friend" />

        <TextView
            android:id="@+id/tv_add_friend_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/title_text_style"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/submit" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/title"
        android:background="@color/contentBackground" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_nouse_username"
                    style="@style/context_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username" />

                <EditText
                    android:id="@+id/et_add_friend_username"
                    style="@style/context_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10" >
                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_nouse_nickname"
                    style="@style/context_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname" />

                <EditText
                    android:id="@+id/et_add_friend_nick_name"
                    style="@style/context_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_nouse_group"
                    style="@style/context_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/group" />

                <EditText
                    android:id="@+id/et_add_friend_group"
                    style="@style/context_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10" >

                    <requestFocus />
                </EditText>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
