<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_friend"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yxnne.mysides.view.MyFriendActivity">
    <RelativeLayout
        android:id="@+id/rl_myfrined_activivty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@mipmap/title_backaground" >
        <TextView
            android:id="@+id/tv_topic_topic"
            style="@style/title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/my_friends"
            />
        <ImageView
            android:contentDescription="@string/contentdiscription_show_menu"
            android:id="@+id/iv_myfriends_showMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:src="@mipmap/ic_launcher" />
        <TextView
            android:id="@+id/tv_myfriend_addmore"
            style="@style/title_text_style"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/add_friends" />
    </RelativeLayout>
    <ExpandableListView
        android:layout_below="@id/rl_myfrined_activivty"
        android:id="@+id/expandable_lv_myfriend"
        android:background="@color/contentBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        >
    </ExpandableListView>

</RelativeLayout>
